# mcboms-optimization

./: .gitignore  .staticrypt.json  INSTRUCTIONS.md  README.md  USER_MANUAL.md  mintty.exe.stackdump  mkdocs.yml  pyproject.toml  run_harwood_validation.py
.github/workflows/: docs.yml
docs/: index.md  overview.md
docs/formulation/: ccm.md  chapter2.md  index.md  methodology.md  network-level.md  operations.md  project-level.md  safety.md
docs/models/: ampl.md  gams.md  index.md  lp.md
docs/models/excel/: 01_worked_example.xlsx  02_harwood_10m.xlsx  02_harwood_50m.xlsx  03_banihashemi_intersections.xlsx  index.md
docs/python/: architecture.md  extending.md  index.md  installation.md
docs/reference/: banihashemi-methodology.md  bibliography.md  glossary.md  harwood-methodology.md  index.md  parameters.md  references.md  status.md  troubleshooting.md
docs/stylesheets/: extra.css
docs/validation/: banihashemi.md  harwood.md  index.md  worked-example.md
examples/: banihashemi_alts.csv  banihashemi_intersections.py
examples/solver-formats/: README.md
examples/solver-formats/ampl/: banihashemi_intersections.mod  banihashemi_intersections.run  harwood_10m.run  harwood_50m.run  mcboms.mod  optimization.mod
examples/solver-formats/gams/: banihashemi_intersections.gms  harwood_10m.gms  harwood_50m.gms  worked_example.gms
models/: README.md
models/ampl/: 01_worked_example.run  02_harwood.mod  02_harwood_10m.run  02_harwood_50m.run  03_banihashemi_intersections.run  banihashemi_intersections.run  worked_example.mod  worked_example.run
models/gams/: 00_optimization.gms  02_harwood_50m.gms
models/lp/: 00_optimization.lp  01_worked_example.lp  02_harwood_10m.lp  02_harwood_50m.lp  03_banihashemi_intersections.lp
notebooks/: 01_worked_example.ipynb  02_harwood_50m.ipynb  03_optimizer_capabilities.ipynb
private/: README.md
private/chapter2/: chapter2.tex  chapter2_styled.docx  mcboms_methodology.tex
src/mcboms/benefits/: __init__.py  ccm.py  operations.py  safety.py
src/mcboms/core/: optimizer.py
src/mcboms/data/: harwood_alternatives.py
src/mcboms/io/: bca_workbook.py  colleague_workbook.py
src/mcboms/utils/: economics.py
tests/: test_ccm.py  test_harwood_validation.py  test_operations.py  test_optimizer_constraints.py  test_safety.py
